have added save button and got local server working with json-server from npm

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 
 
     </div>
+    <div>
+        <h2>
+            
+        </h2>
+    </div>
+
+    <div id="save" style="display:none">
+        <!-- <input id="saveResult" type="text" placeholder="" > -->
+        <button id="saveButton">Click here to save the City, temperature and time!</button>
+
+
+    </div>
 
 </body>
 <script src="script.js"></script>
